# alligator

./: CMakeLists.txt  README.md  alligator.cpp  circular_buffer.cpp  circular_buffer.h  midi.cpp  midi.h  tusb_config.h  uart_rx.pio  usb_descriptors.c
analysis/: 00_test_parser.ipynb
pio/: uart_rx.pio
src/: led_matrix.cpp  led_matrix.h  midi.cpp  midi.h
src/pio/: uart_tx.pio
